[gd_scene load_steps=40 format=3 uid="uid://cgbl7w3egk2sf"]

[ext_resource type="Texture2D" uid="uid://bfw8qx0s6oktm" path="res://assets/slime-front.png" id="1_dngsx"]
[ext_resource type="Texture2D" uid="uid://bn4xtchmltuo0" path="res://assets/slime-back.png" id="1_uqc4s"]
[ext_resource type="Script" path="res://scripts/slime.gd" id="1_yc7aw"]
[ext_resource type="Texture2D" uid="uid://cidui0km6uchn" path="res://assets/slime-side.png" id="3_ss4wy"]
[ext_resource type="PackedScene" uid="uid://d4aiubsji5y0w" path="res://scenes/health_component.tscn" id="4_khlax"]
[ext_resource type="Script" path="res://scripts/States/StateMachine.gd" id="5_bvhj0"]
[ext_resource type="Script" path="res://scripts/States/EnemyIdle.gd" id="6_k5kiw"]
[ext_resource type="Script" path="res://scripts/States/EnemyFollow.gd" id="7_roglp"]
[ext_resource type="PackedScene" uid="uid://c8nuyfj6l50ju" path="res://scenes/hitbox_component.tscn" id="8_s5sse"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ea0ih"]
atlas = ExtResource("1_uqc4s")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1q48"]
atlas = ExtResource("1_uqc4s")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pnsj"]
atlas = ExtResource("1_uqc4s")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc372"]
atlas = ExtResource("1_uqc4s")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4n8e"]
atlas = ExtResource("1_uqc4s")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdmle"]
atlas = ExtResource("1_uqc4s")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3ws6"]
atlas = ExtResource("1_uqc4s")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mogmx"]
atlas = ExtResource("1_uqc4s")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3u6p"]
atlas = ExtResource("1_uqc4s")
region = Rect2(2048, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_qquxr"]
atlas = ExtResource("1_dngsx")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdo7b"]
atlas = ExtResource("1_dngsx")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_f66ws"]
atlas = ExtResource("1_dngsx")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1vov"]
atlas = ExtResource("1_dngsx")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_emdc2"]
atlas = ExtResource("1_dngsx")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kpud"]
atlas = ExtResource("1_dngsx")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1yti"]
atlas = ExtResource("1_dngsx")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nl11h"]
atlas = ExtResource("1_dngsx")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2a6b"]
atlas = ExtResource("1_dngsx")
region = Rect2(2048, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_thvha"]
atlas = ExtResource("3_ss4wy")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjw3f"]
atlas = ExtResource("3_ss4wy")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4oks"]
atlas = ExtResource("3_ss4wy")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb6cn"]
atlas = ExtResource("3_ss4wy")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxrlm"]
atlas = ExtResource("3_ss4wy")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bju2"]
atlas = ExtResource("3_ss4wy")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_l18qj"]
atlas = ExtResource("3_ss4wy")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmnsm"]
atlas = ExtResource("3_ss4wy")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_56e1l"]
atlas = ExtResource("3_ss4wy")
region = Rect2(2048, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_kn4kv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea0ih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1q48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pnsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc372")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4n8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdmle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3ws6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mogmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3u6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mogmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3ws6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdmle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4n8e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc372")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pnsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1q48")
}],
"loop": true,
"name": &"back",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qquxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdo7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f66ws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1vov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emdc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kpud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1yti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl11h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2a6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nl11h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1yti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kpud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emdc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1vov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f66ws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdo7b")
}],
"loop": true,
"name": &"front",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_thvha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjw3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4oks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb6cn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxrlm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bju2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l18qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmnsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56e1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmnsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l18qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bju2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxrlm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb6cn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4oks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjw3f")
}],
"loop": true,
"name": &"side",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r2rkj"]
size = Vector2(72, 71)

[sub_resource type="CircleShape2D" id="CircleShape2D_w5m04"]

[node name="Slime" type="CharacterBody2D" groups=["Enemies"]]
script = ExtResource("1_yc7aw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_kn4kv")
animation = &"side"
autoplay = "front"
frame_progress = 0.80236

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 9.5)
shape = SubResource("RectangleShape2D_r2rkj")

[node name="HealthComponent" parent="." instance=ExtResource("4_khlax")]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "body") instance=ExtResource("8_s5sse")]
health_component = NodePath("../HealthComponent")
body = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
scale = Vector2(5.21254, 5.35263)
shape = SubResource("CircleShape2D_w5m04")
debug_color = Color(0.964525, 0, 0.492232, 0.42)

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_bvhj0")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_k5kiw")
enemy = NodePath("../..")

[node name="Follow" type="Node" parent="State Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("7_roglp")
enemy = NodePath("../..")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="HitboxComponent" to="." method="_on_hitbox_component_body_entered"]
[connection signal="body_exited" from="HitboxComponent" to="." method="_on_hitbox_component_body_exited"]
